--- a/css/custom.css
+++ b/css/custom.css
@@ -40,10 +40,18 @@ img{
     width: 100%;
     
 }
+#header_area .col-md-3 a{
+  height: 100px;
+  width: 170px;
+  display: inline-block;
+ 
+  
 
+}
 .img img{
-    max-width: 100%;
-    height: 100px;
+   width: 100%;
+   height: 100%;
+   object-fit: contain;
 }
 
 /*==================
@@ -52,7 +60,15 @@ img{
 #header_area{
     padding: 15px 0;
 }
-
+  
+#header_area .col-md-9 {
+  /* flex: 0 0 auto; */
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+}
 
 
 /*==============
